--- a/anguler16/src/app/office/office.component.html
+++ b/anguler16/src/app/office/office.component.html
@@ -1,12 +1,9 @@
-<mat-grid-list cols="1" rowHeight="150px">
-  <mat-grid-tile>
-    <div>
-      <mat-form-field>
-        <input matInput placeholder="Enter your text" />
-        <input matInput placeholder="Enter your name" />
+<form [formGroup]="myForm" (ngSubmit)="submitForm()">
+  <label for="name">Name:</label>
+  <input type="text" id="name" formControlName="name" />
 
-        <button mat-button>Submit</button>
-      </mat-form-field>
-    </div>
-  </mat-grid-tile>
-</mat-grid-list>
+  <label for="email">Email:</label>
+  <input type="email" id="email" formControlName="email" />
+
+  <button type="submit">Submit</button>
+</form>
