--- a/office-flow/office-flow-fr/src/app/app.component.html
+++ b/office-flow/office-flow-fr/src/app/app.component.html
@@ -1,26 +1,34 @@
 <mat-grid-list cols="12" rowHeight="52px">
   <mat-grid-tile [colspan]="12"  [rowspan]="1" >
-    <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    <header></header>
+    <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>Header
   </mat-grid-tile>
-  <mat-grid-tile [colspan]="1"  [rowspan]="12" >
-    <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    Home
+  <mat-grid-tile [colspan]="1"  [rowspan]="12" class="side-menu" >
+
+    <mat-list-item>
+      <mat-list-item>
+        <a routerLink="office" >
+          <mat-icon aria-hidden="false" aria-label="menu" fontIcon="apartment"></mat-icon>Office
+        </a>
+      </mat-list-item>
+      <mat-list-item><mat-icon aria-hidden="false" aria-label="menu" fontIcon="apartment"></mat-icon>Office</mat-list-item>
+
+    </mat-list-item>
   </mat-grid-tile>
   <mat-grid-tile [colspan]="11"  [rowspan]="12" >
     <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    Home
+    Body
   </mat-grid-tile>
   <mat-grid-tile [colspan]="5"  [rowspan]="1" >
     <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    Home
+    footer
   </mat-grid-tile>
   <mat-grid-tile [colspan]="4"  [rowspan]="1" >
     <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    Home
+    footer
   </mat-grid-tile>
   <mat-grid-tile [colspan]="3"  [rowspan]="1" >
     <mat-icon aria-hidden="false" aria-label="menu" fontIcon="home"></mat-icon>
-    Home
+    footer
   </mat-grid-tile>
 </mat-grid-list>
+
